# rust-web-showcase

./: .travis.yml  Cargo.toml  README.md  common_crate.html  db_crate.html  getting_started.html  index.html  preamble.html  print.html  searchindex.js  searchindex.json  the_backend_stack.html  what_we_will_build.html
movie-night-backend/: Cargo.toml
movie-night-backend/src/: main.rs
movie-night-backend/src/model/: users.rs
movie-night-book/: Cargo.toml  book.toml
movie-night-book/src/: SUMMARY.md  common.rs  common_crate.md  getting_started.md  preamble.md  prerequisites.md  the_backend_stack.md  the_front_end_stack.md  what_we_will_build.md
movie-night-common/: Cargo.toml
movie-night-common/src/: lib.rs
movie-night-db/: .env  Cargo.toml
movie-night-db/migrations/2019-06-24-114329_create_users/: up.sql
movie-night-db/src/: lib.rs  schema.rs  users.rs
movie-night-frontend/: Cargo.toml
