[package]
name = "movie-night-backend"
version = "0.1.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde = "1.0"
serde_derive = "1.0"

futures = "0.1"
bytes = "0.4"