[package]
name = "movie-night-backend"
version = "0.1.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movie-night-db = {path = "../movie-night-db"}
actix-web = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

futures = "0.1.22"
bytes = "0.4"