[package]
name = "movie-night-db"
version = "0.1.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
